--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowImageAttachmentPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowImageAttachmentPage.xaml
@@ -23,7 +23,7 @@
                 Grid.Row="0"
                 Grid.RowSpan="2">
                 <elements:PinchToZoomContainer.Content>
-                    <Image Aspect="AspectFill" Source="{Binding AttachmentSource, Converter={StaticResource ImageSourceConverter}}" />
+                    <Image Aspect="AspectFill" Source="{Binding AttachmentSource, Converter={StaticResource LocalImageResourceConverter}}" />
                 </elements:PinchToZoomContainer.Content>
             </elements:PinchToZoomContainer>
 
