--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AudioAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AudioAttachmentView.xaml
@@ -5,28 +5,41 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp">
-    <StackLayout
-        x:Name="Root"
-        HeightRequest="50"
-        Orientation="Horizontal">
-        <elements:TintedSvgCachedImage
-            HeightRequest="40"
-            Source="resource://MSO.StimmApp.Resources.Icons.play.svg"
-            TintColor="Gray"
-            WidthRequest="40">
-            <elements:TintedSvgCachedImage.GestureRecognizers>
+
+    <Grid x:Name="Root" HeightRequest="75">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Image Grid.Row="1" Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.play_gray.scale-100.png}">
+            <Image.GestureRecognizers>
                 <TapGestureRecognizer Command="{Binding ViewModel.StartCommand}" />
-            </elements:TintedSvgCachedImage.GestureRecognizers>
-        </elements:TintedSvgCachedImage>
+            </Image.GestureRecognizers>
+        </Image>
+
         <elements:VideoPlaybackSlider
             x:Name="ProgressSlider"
+            Grid.Row="1"
+            Grid.Column="1"
+            FinishedSelectionCommand="{Binding ViewModel.SeekCommand}"
             HorizontalOptions="FillAndExpand"
             VerticalOptions="Center"
             Value="{Binding ViewModel.ProgressValue}" />
-        <!--<StackLayout
-        x:Name="Root"
-        Margin="5,5,5,5"
-        HeightRequest="50"
-        Orientation="Horizontal">-->
-    </StackLayout>
+        <Grid Grid.Row="2" Grid.Column="1">
+            <Label
+                Margin="10,0,0,0"
+                HorizontalOptions="Start"
+                Text="{Binding ViewModel.Elapsed, Converter={StaticResource CrossAudioManagerTimeSpanToStringConverter}, ConverterParameter=short}" />
+            <Label
+                Margin="0,0,10,0"
+                HorizontalOptions="End"
+                Text="{Binding ViewModel.TotalLength, Converter={StaticResource CrossAudioManagerTimeSpanToStringConverter}, ConverterParameter=short}" />
+        </Grid>
+    </Grid>
 </ContentView>
