added new binding

--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
@@ -33,6 +33,7 @@
 
             <viewModels:ViewModelLocator x:Key="Locator" />
             <converter:ImageResourceConverter x:Key="ImageSourceConverter" />
+            <converter:AppStimmerAttachmentToViewEnabledConverter x:Key="AppStimmerAttachmentToViewEnabledConverter" />
             <converter:AppStimmerAttachmentTypeToViewEnabledConverter x:Key="AppStimmerAttachmentTypeToViewEnabledConverter" />
             <converter:HexStringToColorConverter x:Key="HexStringToColorConverter" />
             <converter:BooleanConverter x:Key="BooleanConverter" />
@@ -46,10 +47,10 @@
             <converter:AppStimmerAttachmentViewToViewModelConverter x:Key="AppStimmerAttachmentViewToViewModelConverter" />
             <converter:CrossAudioManagerTimeSpanToStringConverter x:Key="CrossAudioManagerTimeSpanToStringConverter" />
             <converter:LocalImageResourceConverter x:Key="LocalImageResourceConverter" />
-            <converter:AppStimmerAttachmentsToMainPictureConverter x:Key="AppStimmerAttachmentsToMainPictureConverter"></converter:AppStimmerAttachmentsToMainPictureConverter>
-            <converter:ImageAttachmentToImageAttachmentViewModel x:Key="ImageAttachmentToImageAttachmentViewModel"></converter:ImageAttachmentToImageAttachmentViewModel>
-            <converter:ImageSourceToImageConverter x:Key="ImageSourceToImageConverter"></converter:ImageSourceToImageConverter>
-            <converter:AppStimmerMainPictureAvailabilityToVisibilityConverter x:Key="AppStimmerMainPictureAvailabilityToVisibilityConverter"></converter:AppStimmerMainPictureAvailabilityToVisibilityConverter>
+            <converter:AppStimmerAttachmentsToMainPictureConverter x:Key="AppStimmerAttachmentsToMainPictureConverter" />
+            <converter:ImageAttachmentToImageAttachmentViewModel x:Key="ImageAttachmentToImageAttachmentViewModel" />
+            <converter:ImageSourceToImageConverter x:Key="ImageSourceToImageConverter" />
+            <converter:AppStimmerMainPictureAvailabilityToVisibilityConverter x:Key="AppStimmerMainPictureAvailabilityToVisibilityConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
