--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
@@ -2,6 +2,7 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
+             xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
              x:Class="MSO.StimmApp.Views.ContentViews.AppStimmerEditor.AppStimmerEditorDetailsView_2">
   <ContentView.Content>
         <ScrollView x:Name="MainScrollView" Scrolled="MainScrollView_OnScrolled">
@@ -16,17 +17,16 @@
                         <RowDefinition Height="*" />
                         <RowDefinition Height="50" />
                     </Grid.RowDefinitions>
-                    <Image
-                        Grid.Row="0"
-                        Grid.RowSpan="2"
+                    <Image 
+                        Grid.Row="0" Grid.RowSpan="2"
                         AbsoluteLayout.LayoutBounds="0,0,1,1"
                         AbsoluteLayout.LayoutFlags="All"
                         Aspect="AspectFill"
                         Opacity=".8"
                         Source="{Binding AppStimmer.Attachments, Converter={StaticResource AppStimmerAttachmentsToMainPictureConverter}}" />
-                    <elements:GradientFrame
+                    <elements:GradientFrame x:Name="TitleFrame" 
                         Grid.Row="1"
-                        Padding="0"
+                        Padding="0" 
                         EndColor="#AA000000"
                         OutlineColor="Transparent"
                         StartColor="#00000000">
@@ -36,10 +36,21 @@
                             Text="{Binding AppStimmer.Title}"
                             TextColor="White" />
                     </elements:GradientFrame>
+
+                    <Frame x:Name="MainPictureOverlayFrame" 
+                           Grid.Row="0" 
+                           Grid.RowSpan="2" 
+                           BackgroundColor="PaleVioletRed" 
+                           OutlineColor="Transparent" 
+                           Padding="0" 
+                           Opacity="0" ></Frame>
                 </Grid>
 
                 <StackLayout Grid.Row="1">
-                    <Image 
+                    <BoxView HeightRequest="800" BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SecondaryColor}">
+                        
+                    </BoxView>
+                    <!--<Image 
                            Aspect="AspectFill" HeightRequest="300"
                            HorizontalOptions="Fill"
                            Source="{Binding AppStimmer.Attachments, Converter={StaticResource AppStimmerAttachmentsToMainPictureConverter}}"
@@ -53,7 +64,7 @@
                            Aspect="AspectFill"
                            HorizontalOptions="Fill"
                            Source="{Binding AppStimmer.Attachments, Converter={StaticResource AppStimmerAttachmentsToMainPictureConverter}}"
-                           VerticalOptions="Fill" />
+                           VerticalOptions="Fill" />-->
                 </StackLayout>
 
             </Grid>
